fixes overflow problem when hovering on foldable panels and tabs #2889

--- a/app/assets/site/frame.styl
+++ b/app/assets/site/frame.styl
@@ -50,5 +50,4 @@ pad = f2
           transform rotate(-45deg)
 
     .fold
-      overflow hidden
-      max-height 0
+      display none
