--- a/app/assets/site/panel.styl
+++ b/app/assets/site/panel.styl
@@ -85,5 +85,4 @@
             transform rotate(-45deg)
 
       .fold
-        overflow hidden
-        max-height 0
+        display none
